k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: locodex
  labels:
    name: locodex
    environment: production
